apps/lite/ui/src/routes/project/$id/workspace/DetailsPanel.module.css
:root {
	--diffs-font-size: 12px;
}

.panel {
	display: grid;
	grid-template-rows: auto minmax(0, 1fr);

	padding: var(--panel-padding);
}

.headerWrap {
	& header {
		display: flex;
		align-items: center;
		gap: 8px;
	}
}

.panels {
	display: grid;
	grid-template-rows: minmax(0, 1fr);
	grid-template-columns: 1fr;
	column-gap: 12px;
}

.panelsWithFiles {
	grid-template-columns: 300px 1fr;
}

.filesPanel {
	overflow: auto;
}

.detailsContentPanel {
	display: grid;
}

.headerActions {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-block: 16px;
	gap: 10px;
}

.avatar {
	width: 16px;
	height: 16px;
	border-radius: 50%;
	background-color: lightgray;
}

.toggleAvatar {
	width: 14px;
	height: 14px;
	border-radius: 50%;
	background-color: lightgray;
}

.author,
.commitMeta {
	color: var(--text-3);
}

.detailsVirtualizer {
	overflow: auto;
}

.heading {
	margin-block-end: 14px;
}

.pr {
	margin-block-end: 18px;
	color: var(--text-2);
}

.commitHeader {
	display: flex;
	gap: 6px;
}

.commitMessageBody {
	font-size: 13px;
	/* text pre */
	white-space: pre-line;
}

.fileDiffsList {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.fileDiff {
	border: 1px solid var(--border-3);
	border-radius: 10px;
}

.fileHeader {
	border-bottom: 1px solid var(--border-3);
}

.filePath {
	margin: 8px;
	overflow: hidden;
	color: var(--text-3);

	/* Overflow ellipsis on the left, pioritising filename. */
	direction: rtl;
	text-align: left;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.pathLast {
	color: var(--text-1);
}

.hunkHeaderRow {
	display: flex;
	column-gap: 4px;
	align-items: center;
	margin: 8px;

	svg {
		display: block;
	}
}

.hunkHeader {
	flex-grow: 1;
}

.emptyFileHunks {
	margin: 8px;
}

.commitDetailsContent {
	display: flex;
	flex-direction: column;
	gap: 16px;
}

.commitDetailsMeta {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	gap: 8px;
}

